[package]
name = "PavBot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.32.0", features = ["full"]}
md5 = "0.7.0"
async-std = "1.12.0"
serde_json = "1.0.107"
log = "0.4.20"

[[bin]]
name = "PavBot"
path = "src/main.rs"